--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Fallen Apollonian
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: In pursuit of truth above all else.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: images/Fallen_Apollonian.jpg
 
 #
 # Flags below are optional
