--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Fallen Apollonian
 description: In pursuit of truth above all else.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/Fallen_Apollonian.jpg
+avatar: https://i.ibb.co/ChbL0fs/Fallen-Apollonian.jpg
 
 #
 # Flags below are optional
